# nodedb-code2graph

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-foundation-compatibility-gate-ci-hardening-ts-js-depth/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-COMPAT-VERDICTS.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VERIFICATION.md  deferred-items.md
.planning/phases/02-quick-win-extractors-astro-powershell/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-VERIFICATION.md  deferred-items.md
.planning/phases/03-established-template-extractors/: 03-CONTEXT.md  03-DISCUSSION-LOG.md  03-EXECUTION-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-risky-novel-design-extractors/: 04-01-PLAN.md  04-02-PLAN.md  04-03-PLAN.md  04-04-PLAN.md  04-05-PLAN.md  04-06-PLAN.md  04-07-PLAN.md  04-08-PLAN.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
bindings/node/: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json
bindings/node/src/: lib.rs
bindings/python/: .gitignore  Cargo.toml  README.md  pyproject.toml
bindings/python/src/: lib.rs
docs/: ffi-support-matrix.md  supported-languages.md
eval/: Cargo.toml  ORACLE.md
eval/corpus/astro/scoped_call/: Component.astro  expected.edges
eval/corpus/cross_artifact/rust_to_sql/: expected.edges  model.rs
eval/corpus/ffi/rust_napi_to_js/: app.js  expected.edges  lib.rs
eval/corpus/fortran/scoped_call/: expected.edges  math.f90
eval/corpus/go/scoped_call/: expected.edges  main.go
eval/corpus/go/unique_call/: expected.edges  main.go  util.go
eval/corpus/go_oracle/cross_package/: index.scip  main.go  oracle.edges
eval/corpus/go_oracle/cross_package/alpha/: alpha.go
eval/corpus/go_oracle/cross_package/beta/: beta.go
eval/corpus/groovy/scoped_call/: app.groovy  expected.edges
eval/corpus/hcl/scoped_call/: expected.edges  main.tf
eval/corpus/java_oracle/ambiguous_call/: index.scip  oracle.edges
eval/corpus/java_oracle/ambiguous_call/com/example/: Main.java
eval/corpus/java_oracle/ambiguous_call/com/example/alpha/: Service.java
eval/corpus/java_oracle/ambiguous_call/com/example/beta/: Service.java
eval/corpus/java_oracle/cross_call/: index.scip  oracle.edges
eval/corpus/java_oracle/cross_call/com/example/: Main.java  Util.java
eval/corpus/kotlin_oracle/ambiguous_call/: index.scip  oracle.edges
eval/corpus/kotlin_oracle/ambiguous_call/com/example/: Main.kt
eval/corpus/kotlin_oracle/ambiguous_call/com/example/alpha/: util.kt
eval/corpus/kotlin_oracle/ambiguous_call/com/example/beta/: util.kt
eval/corpus/objc/scoped_call/: Session.m  expected.edges
eval/corpus/powershell/scoped_call/: deploy.ps1  expected.edges
eval/corpus/python/scoped_call/: expected.edges  main.py
eval/corpus/python/unique_call/: expected.edges  main.py
eval/corpus/ruby/scoped_call/: expected.edges  main.rb
eval/corpus/ruby_oracle/ambiguous_call/: alpha.rb  beta.rb  index.scip  main.rb  oracle.edges
eval/corpus/rust/ambiguous_call/: expected.edges  main.rs
eval/corpus/rust/unique_call/: expected.edges  main.rs
eval/corpus/rust_oracle/scoped_call/: index.scip  lib.rs  oracle.edges
eval/corpus/rust_oracle/unique_call/: index.scip  lib.rs  oracle.edges
eval/corpus/shell/scoped_call/: deploy.sh  expected.edges
eval/corpus/solidity/scoped_call/: Token.sol  expected.edges
eval/corpus/sql/scoped_call/: expected.edges  revenue_cte.sql
eval/corpus/systemverilog/scoped_call/: dut.sv  expected.edges
eval/corpus/ts_oracle/scoped_call/: alpha.ts  index.scip  main.ts  oracle.edges
eval/corpus/zig/scoped_call/: expected.edges  main.zig
eval/src/: corpus.rs  lib.rs  main.rs  oracle.rs  runner.rs  score.rs
eval/tests/: regression.rs
src/: error.rs  grammar.rs  lang.rs  lib.rs
src/extract/: astro.rs  c.rs  cpp.rs  csharp.rs  dart.rs  dispatch.rs  fortran.rs  go.rs  groovy.rs  hcl.rs  java.rs  javascript.rs  kotlin.rs  lua.rs  luau.rs  mod.rs  objc.rs  pascal.rs  php.rs  powershell.rs  python.rs  ruby.rs  rust.rs  scala.rs  shell.rs  solidity.rs  sql.rs  support.rs  svelte.rs  swift.rs  systemverilog.rs  typescript.rs  zig.rs
src/ffi/: mod.rs  sync_tests.rs
src/graph/: mod.rs  types.rs
src/package/: enrich.rs  mod.rs
src/resolve/: conformance.rs  ffi_bridge.rs  layered.rs  mod.rs  resolver.rs  scope_graph.rs  support.rs  symbol_table.rs
src/resolve/ffi_bridge/: mod.rs
src/resolve/incremental/: mod.rs  stitch.rs  store.rs  subgraph.rs
src/symbol/: descriptor.rs  id.rs  mod.rs
