[workspace]
members = ["eval"]

[package]
name = "codegraph"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Purpose-neutral code-graph extraction: source files → symbols, references, and cross-file edges. Tree-sitter based, no storage opinion."
repository = "https://github.com/nodedb-lab/codegraph"
keywords = ["code-graph", "tree-sitter", "static-analysis", "symbols", "cpg"]
categories = ["development-tools", "parsing"]

[dependencies]
thiserror = "2"
tree-sitter = ">=0.24, <0.27"
# Per-language grammars are added one at a time as extractors land.
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-c = "0.24.2"
tree-sitter-ruby = "0.23.1"
tree-sitter-php = "0.24.2"
tree-sitter-bash = "0.25.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-swift = "0.7.3"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-solidity = "1.2.13"
tree-sitter-sequel = "0.3"
tree-sitter-hcl = "1.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
