[workspace]
members = ["eval"]

[package]
name = "code2graph"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Purpose-neutral code-graph extraction: source files → symbols, references, and cross-file edges. Tree-sitter based, no storage opinion."
repository = "https://github.com/nodedb-lab/code2graph"
keywords = ["code-graph", "tree-sitter", "static-analysis", "symbols", "cpg"]
categories = ["development-tools", "parsing"]

[features]
default = ["rust","python","typescript","go","java","c","cpp","ruby","php","shell","swift","kotlin","solidity","sql","hcl","csharp","scala","dart","lua","luau"]
manifest = ["dep:toml", "dep:serde", "dep:serde_json"]
rust = ["dep:tree-sitter-rust"]
python = ["dep:tree-sitter-python"]
typescript = ["dep:tree-sitter-typescript"]
go = ["dep:tree-sitter-go"]
java = ["dep:tree-sitter-java"]
c = ["dep:tree-sitter-c"]
cpp = ["dep:tree-sitter-cpp"]
ruby = ["dep:tree-sitter-ruby"]
php = ["dep:tree-sitter-php"]
shell = ["dep:tree-sitter-bash"]
swift = ["dep:tree-sitter-swift"]
kotlin = ["dep:tree-sitter-kotlin-ng"]
solidity = ["dep:tree-sitter-solidity"]
sql = ["dep:tree-sitter-sequel"]
hcl = ["dep:tree-sitter-hcl"]
csharp = ["dep:tree-sitter-c-sharp"]
scala = ["dep:tree-sitter-scala"]
dart = ["dep:tree-sitter-dart"]
lua = ["dep:tree-sitter-lua"]
luau = ["dep:tree-sitter-luau"]

[dependencies]
thiserror = "2"
toml = { version = "0.8", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }
tree-sitter = ">=0.24, <0.27"
# Per-language grammars — each optional, enabled via the matching feature flag.
tree-sitter-rust = { version = "0.23", optional = true }
tree-sitter-python = { version = "0.23", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.25.0", optional = true }
tree-sitter-java = { version = "0.23.5", optional = true }
tree-sitter-c = { version = "0.24.2", optional = true }
tree-sitter-ruby = { version = "0.23.1", optional = true }
tree-sitter-php = { version = "0.24.2", optional = true }
tree-sitter-bash = { version = "0.25.1", optional = true }
tree-sitter-cpp = { version = "0.23.4", optional = true }
tree-sitter-swift = { version = "0.7.3", optional = true }
tree-sitter-kotlin-ng = { version = "1.1.0", optional = true }
tree-sitter-solidity = { version = "1.2.13", optional = true }
tree-sitter-sequel = { version = "0.3", optional = true }
tree-sitter-hcl = { version = "1.1", optional = true }
tree-sitter-c-sharp = { version = "0.23.5", optional = true }
tree-sitter-scala = { version = "0.26.0", optional = true }
tree-sitter-dart = { version = "0.2.0", optional = true }
tree-sitter-lua = { version = "0.5.0", optional = true }
tree-sitter-luau = { version = "1.2.0", optional = true }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
