# SPDX-License-Identifier: Apache-2.0
#
# The evaluation harness for code2graph. A separate, unpublished crate: it is a
# *consumer* of code2graph's public API (just like a real downstream tool), so it
# proves resolution quality without leaking any non-neutral concern into the core.
[package]
name = "code2graph-eval"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
publish = false

[dependencies]
code2graph = { path = ".." }
