# SPDX-License-Identifier: Apache-2.0
#
# The evaluation harness for code2graph. A separate, unpublished crate: it is a
# *consumer* of code2graph's public API (just like a real downstream tool), so it
# proves resolution quality without leaking any non-neutral concern into the core.
[package]
name = "code2graph-eval"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
# The scorecard binary (src/main.rs) is the default; `gen-oracle` is opt-in and
# only buildable with --features oracle-regen.
default-run = "code2graph-eval"

[features]
# Off by default: the SCIP-oracle generation path. Only maintainers run this to
# regenerate committed `oracle.edges` from a committed `index.scip`. The default
# build and `cargo test` never compile it, so `scip`/`protobuf` stay out of the
# normal dependency graph. (`scip` 0.8 is rust-protobuf based, hence `protobuf`.)
oracle-regen = ["dep:scip", "dep:protobuf"]

[dependencies]
code2graph = { path = ".." }
scip = { version = "0.8", optional = true }
protobuf = { version = "3", optional = true }

[[bin]]
name = "gen-oracle"
path = "src/bin/gen_oracle.rs"
required-features = ["oracle-regen"]
