[package]
name = "code2graph-node"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
publish = false

[lib]
name = "code2graph_node"
crate-type = ["cdylib"]

[dependencies]
code2graph_core = { package = "code2graph", path = "../..", default-features = false, features = ["serde", "rust", "python", "typescript", "go", "java", "c", "cpp", "ruby", "php", "shell", "swift", "kotlin", "solidity", "sql", "hcl", "csharp", "scala", "dart", "lua", "luau", "pascal", "svelte"] }
napi = { version = "3", features = ["napi10", "serde-json"] }
napi-derive = "3"
serde_json = "1"

[build-dependencies]
napi-build = "2"
