[package]
name = "code2graph-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
name = "code2graph"
crate-type = ["cdylib"]

[dependencies]
code2graph_core = { package = "code2graph", path = "../..", default-features = false, features = ["serde", "rust", "python", "typescript", "go", "java", "c", "cpp", "ruby", "php", "shell", "swift", "kotlin", "solidity", "sql", "hcl", "csharp", "scala", "dart", "lua", "luau", "pascal", "svelte", "powershell", "astro", "zig", "systemverilog"] }
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py39"] }
pythonize = "0.29"
